--- a/assets/give.html
+++ b/assets/give.html
@@ -30,7 +30,7 @@
 </style>
 <script language="javascript">
 	function one(){
-	window.location.href = "main.html";
+	window.location.href = "index.html";
 	}
 	function zero(){
 		 var count = sessionStorage.getItem('no')
