--- a/assets/win2.html
+++ b/assets/win2.html
@@ -40,7 +40,7 @@ function zero(){
 
 }
 	function one(){
-	window.location.href = "main.html";
+	window.location.href = "index.html";
 	}
 </script>
 
