--- a/assets/lose.html
+++ b/assets/lose.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Congrats</title>
+    <title>LOOSE</title>
 <style>
 .guess{
 	color:white;
 	font-family:"Times New Roman";
 	font-size:xx-large;
 	font-weight: bold;
-	text-align: center;
 	}
 
   body {
@@ -30,24 +29,21 @@
 
 </style>
 <script language="javascript">
-function zero(){
-    var data = sessionStorage.getItem('key')
-	data = 30 - data;
-	var value = 100 - data;
-	
-	document.getElementById("count").innerHTML=value;
-
-
-}
+    function zero()
+	{
+		var data = sessionStorage.getItem('secret1')
+		document.getElementById("secret").innerHTML="The Secret no. was "+data;
+	}
 	function one(){
-	window.location.href = "main.html";
+	window.location.href = "index.html";
 	}
 </script>
 
   </head>
   <body onload="zero()"><br>
-  <center><button class="button" id="1" onClick="one()">RESTART</button></center><br>
-  <center><span class="guess">Your Score is: </span></center>&nbsp;<center><span class="guess" id="count"></span></center>
-  <center><img src="win.gif" height="350" width="350"></center>
+  <center><button class="button" id="1" onClick="one()">RESTART</button></center>
+  <p align="center" class="guess">Times Up!!!!</p>
+  <p align="center" class="guess" id=secret></p>
+  <center><img src="lose.gif" height="350" width="350"></center>
   </body>
 </html>
